samples/_failures_safe/1761616791_c55968_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85fc9c85.c: In function ‘tokenize’:
./samples/SAFE/__tmp_85fc9c85.c:168:17: error: expected expression at end of input
  168 |                 token.line =
      |                 ^~~~~
./samples/SAFE/__tmp_85fc9c85.c:168:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85fc9c85.c:168:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85fc9c85.c:168:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85fc9c85.c:168:17: error: expected declaration or statement at end of input
